Task-live_view-3/style.css
/* ... */
/* HEADER */

header {
  background: #ffffff;
  border-bottom: 0.06rem solid #eee;
  position: sticky;
  top: 0;
  min-height: 6.25rem;
  z-index: 50;
}

.top-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
  padding: 3.75rem 9.4rem;
  height: 6.25rem;
}

.site-logo img {
  height: 3.7rem;
  display: block;
}

.nav-links {
  display: flex;
  align-items: center;
  gap: 4rem;
  margin-left: auto;
  margin-right: 6.25rem;
}

.nav-links a {
  text-decoration: none;
  color: #1c2430;
  font-weight: 400;
  font-size: 1.4rem;
  transition: color 0.2s ease;
}

.nav-links a:hover {
  color: var(--coral);
}

.nav-btn {
  background: var(--coral);
  color: #fff;
  text-decoration: none;
  display: inline-block;
  width: 15rem;
  font-weight: 500;
  padding: 0.45rem;
  text-align: center;
  font-size: 1.38rem;
  border-radius: 12.5rem;
  white-space: nowrap;
}

.nav-btn:hover {
  background-color: var(--blue);
  box-shadow: 0 0.63rem 1.38rem rgba(255, 107, 74, 0.35);
}

.nav-links a:first-child {
  color: var(--coral);
}

/**************** HERO ************/
.hero {
  position: relative;
  overflow: hidden;
  background-image: url(./img/hero-bg.jpg);
  background-repeat: no-repeat;
  background-size: 22rem;
}

.hero-section {
  display: flex;
  align-items: center;
  gap: 4rem;
  max-width: 170rem;
}
#carouselExampleCaptions {
  flex: 1;
  min-width: 0;
}

.hero-visual {
  flex: 1;
  display: flex;
  justify-content: flex-end;
}

.hero-visual img {
  width: 100%;
  max-width: 65rem;
  height: auto;
  object-fit: contain;
}

.hero-intro {
  padding-top: 2rem;
  padding-left: 7rem;
}

.label {
  display: block;
  color: var(--coral);
  font-size: 1.5rem;
  font-weight: 600;
  margin-bottom: 1rem;
  text-transform: uppercase;
  letter-spacing: 0.05rem;
}

.hero h1 {
  font-size: 4rem;
  line-height: 1.3;
  font-weight: 700;
  margin-bottom: 1.5rem;
  color: #2a2a2a;
}

.hero h1 .b1 {
  color: var(--blue);
}
.hero h1 .b2 {
  color: var(--coral);
}

.hero-intro p {
  font-size: 1.5rem;
  line-height: 1.8;
  color: #666;
  margin-bottom: 3rem;
  max-width: 45rem;
}

.hero-actions {
  display: flex;
  align-items: center;
  gap: 2.5rem;
  flex-wrap: wrap;
  margin-bottom: 3rem;
}

.hero-btn {
  padding: 1.2rem 2.5rem;
  border-radius: 10rem;
  font-weight: 500;
  font-size: 1.4rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-decoration: none !important;
  transition: all 0.3s ease;
}

.btn-blue {
  background: var(--blue);
  color: #fff !important;
}

.btn-blue:hover {
  background: var(--coral);
}

.phone {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.icon-phone {
  width: 4rem;
  height: 4rem;
  background: linear-gradient(135deg, #ff7b54, #ff5e62);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.icon-phone ion-icon {
  color: #fff;
  font-size: 1.8rem;
}

.phone span {
  color: var(--coral);
  font-size: 1.6rem;
  font-weight: 600;
}

.custom-indicators {
  display: flex;
  gap: 1.5rem;
  padding-left: 7rem;
  margin-top: 2rem;
}

.custom-indicators button {
  background: none;
  border: none;
  font-size: 1.6rem;
  font-weight: 600;
  color: #000;
  cursor: pointer;
  padding: 0 0.4rem;
  position: relative;

  transition: 0.3s;
}

.custom-indicators button::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -6px;
  width: 100%;
  height: 3px;
  background: var(--coral);

  transform: scaleX(0);
  transition: 0.3s;
}
.custom-indicators:has(button:hover) button.active::after {
  transform: scaleX(0);
}

.custom-indicators button:hover::after {
  transform: scaleX(1);
}
.custom-indicators button.active::after {
  transform: scaleX(1);
}

/************************ SERVICES *************************/
.services-section {
  position: relative;
  width: 100%;
  margin: 0 auto;
  padding: 11.3rem 1.5rem;
  overflow: hidden;
}

.dotted {
  position: absolute;
  width: 31.3rem;
  height: 31.3rem;
  background-repeat: no-repeat;
  background-size: contain;
  pointer-events: none;
  z-index: 1;
}

.dot-top {
  top: 0;
  left: 0;
  background-image: url("./img/top-bg.jpg");
}

.dot-bottom {
  bottom: 0;
  right: 0;
  background-image: url("./img/bottom-bg.jpg");
}

.header-group {
  text-align: center;
  position: relative;
  margin-bottom: 4rem;
  z-index: 2;
}

.mark-down {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.5rem;
  font-weight: 800;
  color: rgba(254, 226, 226, 0.568);
  text-transform: uppercase;
  transform: translateY(5rem);
}

.main-title {
  position: relative;
  font-size: 2.5rem;
  font-weight: 800;
  color: #1f2937;
  line-height: 1.4;
  z-index: 2;
}

.text-blue {
  color: var(--blue);
}

.text-coral {
  color: var(--coral);
}

.cards-flex {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2.3rem;
  margin: 6.8rem 0;
  flex: 0 1 22.5rem;
  flex-wrap: wrap;
}

.service-card {
  flex: 1 1 20rem;
  max-width: 31.3rem;
  background: #fff;
  border: 0.07rem solid #f0f0f0;
  border-radius: 1.9rem;
  padding: 1.25rem 2.2rem;
  box-shadow: 0 0 1.6rem rgba(0, 0, 0, 0.05);
  min-height: 26.25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  transition: 0.3s;
}

.service-card:hover {
  transform: translateY(-0.5rem);
  box-shadow: 0 0.7rem 1.9rem rgba(0, 0, 0, 0.1);
}

.service-card:nth-child(2) {
  min-height: 7.5rem;
}

.card-title {
  font-size: 1.9rem;
  font-weight: 800;
  color: #111827;
  margin-bottom: 2.5rem;
}

.card-icon {
  margin-bottom: 2.5rem;
}

.card-icon img {
  width: 5.7rem;
}

.card-divider {
  width: 100%;
  height: 0.07rem;
  margin: 1.25rem 0;
  background-color: #f3f4f6;
}

.card-desc {
  font-size: 1.4rem;
  color: #777;
}

.pagination-dots {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}
/* ... */

